PLFM-8519 - refactor from code review
- Modify RestrictionInformationResponse to include a `userEntityPermissions` field, remove `isDataContributor` field
- Update UserEntityPermissions to include `isDataContributor` field
- Refactor so functions to create UserEntityPermissions objects are static utilities
- Add ability to pass existing EntityStateProvider to EntityAuthorizationManager.getUserPermissionsForEntity
- Use existing EntityStateProvider to calculate permissions in RestrictionInformationManagerImpl